// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extraction characterization > mixed-array.toml as toml 1`] = `
{
  "errors": [
    {
      "filepath": "mixed-array.toml",
      "message": "Failed to parse TOML: Inline lists must be a single type, not a mix of integer and float at row 1, col 17, pos 16:
1> array = [1, 2.5, 3]
                   ^
2: 

",
      "type": "parse-error",
    },
  ],
  "numbers": [],
  "success": false,
}
`;

exports[`extraction characterization > multi-doc.yaml as yaml 1`] = `
{
  "errors": [
    {
      "filepath": "multi-doc.yaml",
      "message": "Failed to parse YAML: expected a single document in the stream, but found more",
      "type": "parse-error",
    },
  ],
  "numbers": [],
  "success": false,
}
`;

exports[`extraction characterization > numbers.csv as csv 1`] = `
{
  "errors": [],
  "numbers": [
    1,
    19.99,
    2,
    -3.5,
    3,
    12,
    4,
    42,
    100,
    0.5,
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.csv via streaming parser 1`] = `
{
  "errors": [],
  "numbers": [
    1,
    19.99,
    2,
    -3.5,
    3,
    12,
    4,
    42,
    100,
    0.5,
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.env as env 1`] = `
{
  "errors": [],
  "numbers": [
    3000,
    45.5,
    1.2,
    -7,
    99,
    8080,
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.ini as ini 1`] = `
{
  "errors": [],
  "numbers": [
    8080,
    30.5,
    12,
    -42,
    0.5,
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.json as json 1`] = `
{
  "errors": [],
  "numbers": [
    1250000,
    -340.5,
    1500,
    0,
    9007199254740992,
    1,
    2.5,
    -3,
    0.001,
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.toml as toml 1`] = `
{
  "errors": [],
  "numbers": [
    42,
    -3.14,
    5000,
    Infinity,
    100,
    1,
    2,
    3,
    2.5,
    -0.5,
    12345,
  ],
  "success": true,
}
`;

exports[`extraction characterization > numbers.yaml as yaml 1`] = `
{
  "errors": [],
  "numbers": [
    42,
    -19.99,
    6.02e+23,
    26,
    Infinity,
    1,
    2.5,
    10,
  ],
  "success": true,
}
`;

exports[`extraction characterization > numeric-header.csv as csv 1`] = `
{
  "errors": [],
  "numbers": [
    2024,
    7,
    1,
    19.99,
    2,
    -3.5,
  ],
  "success": true,
}
`;

exports[`extraction characterization > numeric-header.csv via streaming parser (header skipped, diverges from sync) 1`] = `
{
  "errors": [],
  "numbers": [
    19.99,
    1,
    -3.5,
    2,
  ],
  "success": true,
}
`;

exports[`extraction characterization > unknown file type falls back to regex scan 1`] = `
{
  "errors": [],
  "numbers": [
    123,
    1.2,
    3,
    -5,
    3.14,
    15,
    12,
    0,
  ],
  "success": true,
}
`;
